objects/Salesforce_User__c.object
<CustomObject>
    <description>This object holds the Users linked to the Salesforce Orgs.</description>
    <fields>
        <fullName>Corporate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Salesforce Users</relationshipLabel>
        <relationshipName>Salesforce_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Contact_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The contact Id the Salesforce User used to have when it was a contact instead of a Salesforce User record</description>
        <externalId>true</externalId>
        <label>Old Contact Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Salesforce Users</relationshipLabel>
        <relationshipName>Salesforce_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Salesforce User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Salesforce_Org__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SU-{0000000}</displayFormat>
        <label>Salesforce User Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>